# krypton-drafts

./: README.md
client/: README.md  client.dot  client.md
client/krypton-python/: .gitignore  .pre-commit-config.yaml  README.md  example.py  main.py  pyproject.toml
client/krypton-python/auth/: client.py  exceptions.py  graphql.py
client/krypton-python/krypton/auth/: client.py  exceptions.py  graphql.py  queries.py
