[tool.poetry]
name = "krypton-python-simple"
version = "0.1.0"
description = ""
authors = ["Maxime Mouchet <max@maxmouchet.com>"]
license = "MIT"
packages = [
    { include = "krypton" }
]

[tool.poetry.dependencies]
python = "^3.6.1"
requests = "^2.23.0"
pyjwt = {extras = ["crypto"], version = "^1.7.1"}

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.4.4"
pytest = "^5.4.1"
pre-commit = "^2.2.0"

[tool.isort]
# https://github.com/timothycrosley/isort/issues/694
# => Interopability with black
# => https://github.com/psf/black#how-black-wraps-lines
force_grid_wrap = 0
include_trailing_comma = true
multi_line_output = 3
use_parentheses = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
